# Minesweeper-Clone

./: .gitignore  Readme.md  pyproject.toml  requirements.txt  todo.md
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/__test__/: test_models.py  test_serializers.py  test_views.py
api/__tests__/: test_models.py  test_serializers.py  test_views.py  utils.py
api/migrations/: 0001_initial.py  0002_alter_users_first_name_alter_users_last_name.py  0002_minesweeperscore.py  0003_alter_minesweeperscore_options_and_more.py  0003_alter_users_managers.py  0004_rename_user_minesweeperscore_owner.py
capstone/: settings.py  urls.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  Router.tsx  index.css  index.tsx  store.ts
frontend/src/Auth/: useAuth.test.tsx  useAuth.tsx
frontend/src/components/: MainMenuItem.tsx  Modal.tsx  ProtectedComponent.tsx
frontend/src/components/Forms/: InputField.tsx  LoginForm.tsx
frontend/src/components/HallOfFame/: HallOfFamePage.tsx  ScoreListItem.tsx  Tab.tsx
frontend/src/components/Index/: IndexPage.tsx
frontend/src/components/Instructions/: InstructionsPage.tsx  Pagination.tsx
frontend/src/components/Login/: LoginPage.tsx
frontend/src/components/Minesweeper/: DifficultySelector.tsx  GameLostWindow.tsx  (+8 more)
frontend/src/hooks/: useAuth.tsx  useMinesweeper.tsx  useToggle.tsx
frontend/src/interfaces/: IAuth.ts  IMessage.ts  MinesweeperScoreDTO.ts
frontend/src/pages/: About.tsx  Index.tsx  Login.tsx  ProtectedPage.tsx  Register.tsx
frontend/src/utils/: constants.ts  lib.test.ts  lib.ts
(+40 files in other folders)
