[tool.poetry]
name = "minesweeper-clone-api"
version = "0.1.0"
description = "api for the minesweeper clone game"
authors = ["Byron Stewart <byronstewart22@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "minesweeper_clone_api"}]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.1.1"
djangorestframework = "^3.13.1"
djangorestframework-simplejwt = "^5.2.0"
django-cors-headers = "^3.13.0"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"

[tool.poetry.group.dev.dependencies]
mixer = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
